refactor build.sbt